<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_music">

    <fragment
        android:id="@+id/nav_music"
        android:name="com.faizankhalid.musync.ui.music.MusicFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_broadcast"
        android:name="com.faizankhalid.musync.ui.broadcast.BroadcastFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_broadcast" />

    <fragment
        android:id="@+id/nav_recieve"
        android:name="com.faizankhalid.musync.ui.recieve.RecieveFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_recieve" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.faizankhalid.musync.ui.settings.SettingsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.faizankhalid.musync.ui.share.ShareFragment"
        android:label="@string/menu_share" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.faizankhalid.musync.ui.about.AboutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_about" />
</navigation>